# task4_safearray

./: CMakeLists.txt  README.md
res/raw/: readme.md
src/: CMakeLists.txt  main.cpp  safearray.h  safearray.hpp  subject.cpp  subject.h
tests/: CMakeLists.txt  safearray_test.cpp  subject_test.cpp
